--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -109,6 +109,17 @@
                         <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 库存管理
                     </a>
                 </li>
+                <li class="sidebar-nav-heading">系统管理</li>
+                <li class="sidebar-nav-link only_manage_menu">
+                    <a href="users.html" >
+                        <i class="am-icon-users sidebar-nav-link-logo"></i> 账号管理
+                    </a>
+                </li>
+                <li class="sidebar-nav-link">
+                    <a href="user.html" >
+                        <i class="am-icon-user sidebar-nav-link-logo"></i> 个人中心
+                    </a>
+                </li>
 
 
 
