--- a/src/main/resources/static/proinventroy.html
+++ b/src/main/resources/static/proinventroy.html
@@ -103,6 +103,17 @@
                     <i class="am-icon-wpforms sidebar-nav-link-logo"></i> 库存管理
                 </a>
             </li>
+            <li class="sidebar-nav-heading">系统管理</li>
+            <li class="sidebar-nav-link only_manage_menu">
+                <a href="users.html" >
+                    <i class="am-icon-users sidebar-nav-link-logo"></i> 账号管理
+                </a>
+            </li>
+            <li class="sidebar-nav-link">
+                <a href="user.html" >
+                    <i class="am-icon-user sidebar-nav-link-logo"></i> 个人中心
+                </a>
+            </li>
 
 
 
@@ -142,7 +153,7 @@
                                                 class="am-icon-plus"></span> 新增
                                         </button>
                                         <button id="import_btn" type="button"
-                                                class="am-btn am-btn-default am-btn-secondary"><span
+                                                class="am-btn am-btn-default am-btn-secondary only_normal"><span
                                                 class="am-icon-upload"></span> 导入
                                         </button>
                                     </div>
@@ -181,6 +192,7 @@
                                     <th style="width: 10%">库存值</th>
                                     <th style="width: 12%">型号</th>
                                     <th style="width: 12%">生产厂商</th>
+                                    <th style="width: 10%" class="only_manage">所属账号</th>
                                     <th style="width: 22%">操作</th>
                                 </tr>
                                 </thead>
@@ -783,6 +795,16 @@
 <script>
     $(function () {
         showUser();
+        var tempUser = window.currentUser;
+        var showType =true;
+        if(null!=tempUser)
+        {
+            if("1"==tempUser.type)
+            {
+                showType = false;
+            }
+
+        }
         var columns = [{"data": "productNo"},
             {"data": "name"},
             {"data": "unit"},
@@ -790,6 +812,7 @@
             {"data": "inventoryNum"},
             {"data": "productModel"},
             {"data": "manufacturer"},
+            {"data":"userName","visible":showType},
             {
                 "data": null, render: function (data, type, row, meta) {
                     var rowIndex = meta.row;
